log settings WARN not INFO
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3178 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/log4j.properties
+++ b/log4j.properties
@@ -6,9 +6,9 @@ log4j.rootLogger=debug, stdout, file
 
 # Application logging level
 # 	Valid options are TRACE,DEBUG,INFO,WARN,ERROR,FATAL
-log4j.logger.org.solrmarc.marc.MarcImporter=INFO
-log4j.logger.org.solrmarc.marc.MarcHandler=INFO
-log4j.logger.org.solrmarc.tools.Utils=INFO
+log4j.logger.org.solrmarc.marc.MarcImporter=WARN
+log4j.logger.org.solrmarc.marc.MarcHandler=WARN
+log4j.logger.org.solrmarc.tools.Utils=WARN
 
 # stdout appender
 # Output the file name and line number to the console
@@ -21,11 +21,11 @@ log4j.appender.stdout.target=System.err
 # Use a RollingFileAppender
 # named solrmarc.log
 # with a max file size of 100KB
-# and keep 1 previous log file
+# and keep 10 previous log files
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=solrmarc.log
 log4j.appender.file.MaxFileSize=100KB
-log4j.appender.file.MaxBackupIndex=1
+log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d [%t] %-5p %t %c - %m%n
 
