solrmarc vendor drop R950 2009-10-28 naomi's changes to project to accommodate test
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3321 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/build.properties
+++ b/build.properties
@@ -6,6 +6,7 @@ lib.dir = lib
 build.dir = bin
 dist.dir = dist
 
+# is trans.map.path needed?
 trans.map.path = ${lib.dir}/solrmarc/translation_maps
 script.template.dir = script_templates
 
