--- a/log4j.properties
+++ b/log4j.properties
@@ -1,6 +1,6 @@
 # Properties file for logging via log4j
 #
-# $Id: log4j.properties 693 2009-05-18 15:21:44Z rh9ec@virginia.edu $
+# $Id: log4j.properties 926 2009-10-21 15:55:52Z rh9ec@virginia.edu $
 
 log4j.rootLogger=debug, stdout, file
 
@@ -23,7 +23,7 @@ log4j.appender.stdout.target=System.err
 # with a max file size of 100KB
 # and keep 10 previous log files
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=solrmarc.log
+log4j.appender.file.File=${one-jar.home.dir}solrmarc.log
 log4j.appender.file.MaxFileSize=100KB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
