--- a/examples/UvaBlacklight/blacklight_dev_config.properties
+++ b/examples/UvaBlacklight/blacklight_dev_config.properties
@@ -7,7 +7,7 @@ solr.indexer = org.blacklight.BlacklightIndexer
 solr.indexer.properties = blacklight_index.properties,blacklight_dev_index.properties
 
 #optional URL of running solr search engine to cause updates to be recognized.
-solr.hosturl = http://localhost:8080/solr_dev/update
+solr.hosturl = http://solrpowr.lib.virginia.edu:8080/solr_dev/update
 solr.optimize_at_end = false
 
 solrmarc.path = .
@@ -20,5 +20,6 @@ marc.to_utf_8 = true
 marc.permissive = true
 marc.default_encoding = MARC8
 marc.include_errors = true
+marc.combine_records = 999
 
 marc.ids_to_delete = 
