renamed bibix_ to sw_ and jar is now named swSolrmarc.jar
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3340 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_config.properties
+++ b/examples/stanfordBlacklight/sw_config.properties
@@ -17,7 +17,7 @@ solrmarc.site.path = .
 #  SolrIndexer
 solr.indexer = edu.stanford.StanfordIndexer
 # properties indicating how to populate solr index fields from marc data
-solr.indexer.properties = bibix_index.properties
+solr.indexer.properties = sw_index.properties
 # optimize solr index after adding data.  Improves searching speed, but requires
 #  twice as much disk space as index while optimization is in progress.
 solr.optimize_at_end = false
