add test.solr.dir/*.jar to test classpath
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3353 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/build.xml
+++ b/build.xml
@@ -1056,6 +1056,7 @@
 
         <path id="test.run.classpath.jars">
             <path refid="test.classpath.jars" />
+            <fileset dir="${test.solr.dir}" includes="*.jar" />
             <fileset file="${site.test.build.dir}/${site.test.jar}" />
         </path>
 
