--- a/examples/stanfordBlacklight/build.properties
+++ b/examples/stanfordBlacklight/build.properties
@@ -1,88 +1,28 @@
-# SITE properties file
-name = stanfordBlacklightSolrmarc
+# ant properties for examples/stanfordBlacklight 
 
-java.compat.version = 1.5
+# - default.config - file containing your site's configuration properties for 
+#   solrmarc
+default.config = sw_config.properties
+# - custom.config.file.prefix - your site's prefix for _index.properties file
+#   (and maybe something else?)
+custom.config.file.prefix = sw
+# - custom.jar.name - prefix for your site's custom jar (if you have custom java
+#   classes) (full name of thiw jar will be prefixSolrmarc.jar??)
+custom.jar.name = sw
+# - distribution.jar.name - full name of distribution jar (without the .jar)
+distribution.jar.name = swSolrMarc
 
-# NOTE: some of these are in top level build.properties, but if they are used
-#  here, they must be defined here
-src.dir = src
-lib.dir = lib
-build.dir = bin
-dist.dir = dist
-trans.map.path = translation_maps
-script.template.dir = script_templates
-
-# SOLR properties
+# - solr.version - the version of solr, you're using.
 solr.version = 1.4
-solr.parent.dir = /home/blacklight/solr
-#solr.path = ${solr.parent.dir}/solr1.4-nightly-2009-03-24
-solr.path = ${solr.parent.dir}/solr1.4
-solr.indexer = edu.stanford.StanfordIndexer
-solr.path.available = true
-solr.indexer.properties = bibix_index.properties
-#solr.hosturl = http://127.0.0.1/solr/update
-solr.data.dir = ${solr.path}/data
-#solr.data.dir = /home/blacklight/data/solr/dataBuild
+# - solr.path - used when building your site's solrmarc, if you're using Solr
+#   that's not in Solrmarc list
+#solr.path=/home/blacklight/jetty-solr/solr
+# - solr.hosturl - set sw_config.properties - not needed here
 
-# MARC file properties
-marc.to_utf_8 = true
-marc.permissive = true
-marc.include_errors = false
-marc.default_encoding = MARC8
-#marc.default_encoding = UTF-8
-#marc.default_encoding = UNIMARC
-#marc.default_encoding = BESTGUESS
+# - exe.mem.args - java options put in indexing scripts that are generated
+exe.mem.args = -Xmx1g
 
-# SITE properties
-site.src.dir = ${site.dir}/${src.dir}
-site.lib.dir = ${site.dir}/${lib.dir}
-site.build.dir = ${site.dir}/${build.dir}
-site.map.dir = ${site.dir}/${trans.map.path}
-site.script.dir = ${site.dir}/script_templates
+scripts.dir = scripts
 
-default.config = bibix_config.properties
-custom.index.source.exists = true
-custom.indexer.class = ${solr.indexer}
-custom.jar.name = stanfordBlacklightSolrmarc
-custom.config.file.prefix = bibix
-distribution.jar.name = ${custom.jar.name}
-exe.mem.args = -Xmx512m -Xms512m
-
-# TEST properties
-test.dir = test
-test.solr.dir = ${test.dir}/solr
-test.data.dir = ${site.dir}/${test.dir}/data
-test.solr.verbose = false
-test.data.file = 
-
-# SITE TEST properties
-site.test.dir = ${site.dir}/${test.dir}
-site.test.src.dir = ${site.test.dir}/${src.dir}
-site.test.build.dir = ${site.test.dir}/${build.dir}
-site.test.solr.dir = ${site.test.dir}/solr
-site.test.solr.conf.override = ${solr.path}/conf    
-site.test.jar = ${custom.jar.name}Test.jar
-
-#test.class = edu.stanford.AccessTests
-#test.class = edu.stanford.AuthorTests
-#test.class = edu.stanford.CallNumberTests
-#test.class = edu.stanford.DiacriticTests
-#test.class = edu.stanford.DisplayFieldsPropsTests
-#test.class = edu.stanford.EditionTests
-#test.class = edu.stanford.FacetFieldsPropsTests
-#test.class = edu.stanford.FormatTests
-#test.class = edu.stanford.ItemInfoTests
-#test.class = edu.stanford.LanguageTests
-#test.class = edu.stanford.MiscellaneousFieldTests
-#test.class = edu.stanford.PhysicalTests
-#test.class = edu.stanford.PublicationTests
-#test.class = edu.stanford.SearchFieldsPropsTests
-#test.class = edu.stanford.SeriesTests
-#test.class = edu.stanford.SortFieldsPropsTests
-#test.class = edu.stanford.StandardNumberTests
-#test.class = edu.stanford.SubjectTests
-#test.class = edu.stanford.TitleTests
-test.class = edu.stanford.UrlTests
-#test.class = edu.stanford.VernacularTests
-#test.class = edu.stanford.AllBibIxTests
-
+test.class = edu.stanford.AccessTests
+#test.class = edu.stanford.AllTests
