revert to normal trans.map.path  since now using bob's ant build.
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3358 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/build.properties
+++ b/build.properties
@@ -6,7 +6,7 @@ lib.dir = lib
 build.dir = bin
 dist.dir = dist
 
-trans.map.path = ${lib.dir}/solrmarc/translation_maps
+trans.map.path = translation_maps
 script.template.dir = script_templates
 
 # TEST properties
