final tweaking of build scripts so ant test target will run on hudson
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3360 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/build.properties
+++ b/build.properties
@@ -5,6 +5,7 @@ src.dir = src
 lib.dir = lib
 build.dir = bin
 dist.dir = dist
+scripts.dir = scripts
 
 trans.map.path = translation_maps
 script.template.dir = script_templates
