test class must be AllTests for hudson build
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3361 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/build.properties
+++ b/examples/stanfordBlacklight/build.properties
@@ -22,5 +22,5 @@ solr.version = 1.4
 # - exe.mem.args - java options put in indexing scripts that are generated
 exe.mem.args = -Xmx1g
 
-test.class = edu.stanford.AccessTests
-#test.class = edu.stanford.AllTests
+#test.class = edu.stanford.AccessTests
+test.class = edu.stanford.AllTests
