changing properties to be values for hudson
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3362 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_config.properties
+++ b/examples/stanfordBlacklight/sw_config.properties
@@ -5,8 +5,9 @@
 #  http://code.google.com/p/solrmarc/wiki/ConfiguringSolrMarc
 
 # - solrmarc.path - top level solrmarc directory
+solrmarc.path = ../..
 #solrmarc.path = /home/blacklight/solrmarc
-solrmarc.path = /Users/naomi/NGDE/solrmarc/stanfordSolrmarc
+#solrmarc.path = /Users/naomi/NGDE/solrmarc/stanfordSolrmarc
 # - solrmarc.site.path - path to solrmarc site specific files 
 #   (e.g. xxx_config and xxx_index.properties files)
 solrmarc.site.path = .
@@ -34,8 +35,9 @@ marc.verbose = false
 #   build.override.properties)
 
 # - solr.path - path to your Solr instance
+solr.path = /home/hudson/solr_4_solrmarc
 #solr.path = /home/blacklight/solr/solr1.4-2009-03-24
-solr.path = /Users/naomi/NGDE/solr/solr1.4
+#solr.path = /Users/naomi/NGDE/solr/solr1.4
 # - solr.data.dir - path to data directory for your Solr instance 
 #   (note: Solr can be configured to use a different data directory)
 #solr.data.dir = /home/blacklight/data/solr/dataBuild
