changed some comments and reduced the size of the solr log to 100K
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3365 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_config.properties
+++ b/examples/stanfordBlacklight/sw_config.properties
@@ -1,4 +1,4 @@
-# Properties needed by ant targets
+# Properties for solrmarc java code
 
 # --- your site's basic configuration properties -------------------------------
 #  for more documentation, see 
