--- a/examples/stanfordBlacklight/solrConf/logging.properties
+++ b/examples/stanfordBlacklight/solrConf/logging.properties
@@ -24,4 +24,4 @@ java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.pattern = ./logs/solr_log.%g.txt
 java.util.logging.FileHandler.append = true
 java.util.logging.FileHandler.count = 5000
-java.util.logging.FileHandler.limit = 10240000  # 10MB
+java.util.logging.FileHandler.limit = 102400  # 100K
