open_search is now indexed to allow searches to match suggestions title_sort is now stored so it can be used for sorting nearby-on-shelf items callnum_sort and callnum_reverse_sort renamed to shelfkey, reverse_shelfkey and now not stored as the information is pulled from item_display
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3370 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -123,8 +123,8 @@ dewey_b4cutter_facet = custom, getDeweyCallNumsB4Cutter
 gov_doc_type_facet = custom, getGovDocCats
 
 callnum_search = custom, getLocalCallNums
-callnum_sort = custom, getCallNumsSort
-callnum_reverse_sort = custom, getCallNumsReverseSort
+shelfkey = custom, getShelfkey
+reverse_shelfkey = custom, getReverseShelfkey
 
 # Item Info Fields (from 999 that aren't call number)
 barcode_search = 999i
