don't reorder marc fields on ingest
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3378 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_config.properties
+++ b/examples/stanfordBlacklight/sw_config.properties
@@ -19,7 +19,7 @@ solr.indexer = edu.stanford.StanfordIndexer
 # - marc.override - optional (?) class used to provide RecordImpl object that 
 #  overrides marc4j RecordImpl.  Useful when changes are needed from marc4j 
 #  code
-marc.override = org.solrmarc.marcoverride.UVAMarcFactoryImpl 
+marc.override = org.solrmarc.marcoverride.NoSortMarcFactoryImpl 
 # - marc_permissive - if true, try to recover from errors, including records
 #  with errors, when possible
 marc_permissive = true
