use a small set of tests as the default test.
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3380 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/build.properties
+++ b/examples/stanfordBlacklight/build.properties
@@ -23,4 +23,5 @@ solr.version = 1.4
 exe.mem.args = -Xmx1g
 
 #test.class = edu.stanford.AccessTests
-test.class = edu.stanford.AllTests
+#test.class = edu.stanford.AllTests
+test.class = edu.stanford.MiscellaneousFieldTests
