--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -123,8 +123,8 @@ dewey_b4cutter_facet = custom, getDeweyCallNumsB4Cutter
 gov_doc_type_facet = custom, getGovDocCats
 
 callnum_search = custom, getLocalCallNums
-shelfkey = custom, getShelfkey
-reverse_shelfkey = custom, getReverseShelfkey
+shelfkey = custom, getShelfkeys
+reverse_shelfkey = custom, getReverseShelfkeys
 
 # Item Info Fields (from 999 that aren't call number)
 barcode_search = 999i
