revert to former state for testClean target
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3399 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/build.xml
+++ b/build.xml
@@ -916,7 +916,7 @@
 
     <!-- Site Testing Targets -->
 
-    <target name="testClean" depends="clean,init" description="clean generated test directories">
+    <target name="testClean" depends="init" description="clean generated test directories">
         <delete dir="${site.test.dir}/${build.dir}" />
     </target>
 
