add translations for no-longer-skipped locations
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3425 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/translation_maps/location_map.properties
+++ b/examples/stanfordBlacklight/translation_maps/location_map.properties
@@ -24,7 +24,7 @@ ARTVAULT = Art Vault
 ASK@EASIA = For holdings inquire at the East Asia Library
 ASK@GSB =  Check Jackson catalog for status
 ASK@LANE =  Check Lane catalog for status
-#ASSMD-LOST = Assumed Lost (!skip 999)
+ASSMD-LOST = Assumed lost
 ATLASES = Atlas Section
 AT-REPAIR = Equipment Sent for Repair
 AUX-STACKS = Stacks
@@ -84,7 +84,7 @@ EAR-LOAN = Inquire at loan desk
 EARTH-RESV =  Reserves
 EAS-LOAN = Inquire at loan desk
 EAS-RESV = Reserves
-#EDI = In Process  (!skip 999)
+EDI = In Process
 EDU-LOAN = Inquire at loan desk
 EDU-RESV = Reserves
 #E-INPROC-S = In Process - shadow (!skip 999)
@@ -156,8 +156,8 @@ ILL = Interlibrary Loan
 ILL-OFFICE = Interlibrary Services Department
 #INDEXES = (!as is for now)
 INPROCESS = In process
-#INSHIPPING = (!skip 999)
-#INSTRUCTOR = Instructor's Copy (!skip 999)
+INSHIPPING = In process
+INSTRUCTOR = Instructor's copy
 INTCOLLCAT = International College Catalogs
 #INTERNET = (!show link only)
 INTL-DOCS =  International Government Documents
@@ -187,10 +187,10 @@ LOCK-JPN = Locked Stacks: Inquire at loan desk
 LOCK-KOR = Locked Stacks: Inquire at loan desk
 #LOCKSS = LOCKSS - shadow (!skip 999)
 #LOST = Lost (!skip 999)
-#LOST-ASSUM = Lost (!skip 999)
-#LOST-CLAIM = Lost (!skip 999)
-#LOST-PAID = Lost (!skip 999)
-#MANNING = Manning Collection: Non-circulating (!skip 999)
+LOST-ASSUM = Lost
+LOST-CLAIM = Lost
+LOST-PAID = Lost
+MANNING = Manning Collection (Non-circulating)
 MANUSCRIPT = Inquire at loan desk
 MAP-CASES = Map Cases
 #MAPCASES-S = SHADOWED (!skip 999)
@@ -217,8 +217,8 @@ MICROFICHE = Microfiche
 MICROFILM = Microfilm
 MICROTEXT = Microtext
 MINIATURE = Miniature
-#MISSING = Missing (!skip 999)
-#MISS-INPRO = Missing in-process (!skip 999)
+MISSING = Missing
+MISS-INPRO = Missing
 MSS-10 = Manuscript Collection
 MSS-20 = Manuscript Collection
 MSS-30 = Manuscript Collection: Stored off-campus
