--- a/examples/stanfordBlacklight/translation_maps/locations_online_list.properties
+++ b/examples/stanfordBlacklight/translation_maps/locations_online_list.properties
@@ -1,9 +1,10 @@
 # location codes for online resources
+#  can be home or current locations
 
-E-RECVD
-E-RESV
-ELECTR-LOC
-INTERNET
+E-RECVD # elec resource received and needs cataloging
+E-RESV  # e-books put on reserve
+ELECTR-LOC  # not used?
+INTERNET  # e.g. SUL library, this is home loc
 KIOSK
 ONLINE-TXT
 RESV-URL  # Internet Reserves
