don't index record if all items are skipped. if there are no items, record is on order.
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3499 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -129,7 +129,7 @@ reverse_shelfkey = custom, getReverseShelfkeys
 barcode_search = 999i
 access_facet = custom, getAccessMethods
 building_facet = custom, getBuildings, library_map.properties
-item_display = custom, getItemDisplay
+item_display = customDeleteRecordIfFieldEmpty, getItemDisplay
 
 pattern_map.issn.pattern_0 = ^(\\d{4}-\\d{3}[X\\d])$=>$1
 
