--- a/build.xml
+++ b/build.xml
@@ -1158,7 +1158,7 @@
             <fileset dir="${site.lib.dir}" includes="*.jar" />
             <fileset dir="${lib.dir}" includes="*.jar" />
             <fileset dir="${lib.dir}/solrmarc/${solrmarc.core.build.dir}" includes="*.jar" />
-            <fileset dir="${test.solr.dir}" includes="*.jar" />
+            <fileset dir="${site.test.solr.dir}/lib" includes="*.jar" />
             <fileset file="${site.test.build.dir}/${site.test.jar}" />
             <path refid="emma.lib" />
         </path>
