generate an html coverage report from emma
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3516 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/build.xml
+++ b/build.xml
@@ -1188,8 +1188,9 @@
                  </fileset>
 
                  <xml outfile="${emma.coverage.dir}/coverage.xml" depth="method" columns="name,class,method,block,line"/>
+                 <html outfile="${emma.coverage.dir}/coverage.html" depth="method" columns="name,class,method,block,line"/>
              </report>
          </emma>
     </target>
-        
+    
 </project>
