fix the source directory for the emma coverage report so you can see which lines are covered.
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3517 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/build.xml
+++ b/build.xml
@@ -1182,7 +1182,7 @@
         </junit>
 
         <emma enabled="${emma.enabled}" >
-             <report sourcepath="${src.dir}" >
+             <report sourcepath="${site.src.dir}" >
                  <fileset dir="${emma.coverage.dir}" >
                      <include name="*.emma" />
                  </fileset>
