--- a/build.xml
+++ b/build.xml
@@ -1095,11 +1095,11 @@
         </if>  
     </target>
     
-<!-- Emma Code Coverage -->    
-    <property name="emma.coverage.dir" value="${build.dir}/coverage" />
+<!-- Emma Code Coverage -->
+    <property name="emma.coverage.dir" value="${build.dir}/coverage/emma" />
     <property name="emma.dir" value="/home/hudson/hudson/plugins/emma/lib" />
 <!--
-    <property name="emma.dir" value="/Users/naomi/Downloads/emma-2.0.5312/lib/" />
+    <property name="emma.dir" value="/Applications/emma-2.0.5312/lib/" />
 -->
     <property name="emma.instr.dir" value="instr"/>
     <!-- Set emma.lib to refer to the list of EMMA jar files -->
@@ -1152,8 +1152,8 @@
         </emma>
     </target>
     
-    <target name="emma-test" depends="clean,testJar,emma-instrument" description="run tests with Coberature code coverage">
-        <path id="emma.test.classpath.jars">
+    <target name="emma-test" depends="clean,testJar,emma-instrument" description="run tests with emma code coverage">
+        <path id="emma.test.classpath">
             <pathelement location="${emma.instr.dir}" />
             <fileset dir="${site.lib.dir}" includes="*.jar" />
             <fileset dir="${lib.dir}" includes="*.jar" />
@@ -1167,7 +1167,7 @@
             <formatter type="xml" />
 
             <classpath>
-                <path refid="emma.test.classpath.jars" />
+                <path refid="emma.test.classpath" />
             </classpath>
             
             <jvmarg value="-Demma.coverage.out.file=${emma.coverage.dir}/coverage.emma" />
@@ -1191,6 +1191,74 @@
                  <html outfile="${emma.coverage.dir}/coverage.html" depth="method" columns="name,class,method,block,line"/>
              </report>
          </emma>
+    </target>
+    
+<!-- Cobertura Code Coverage -->
+    <property name="cobertura.dir" value="/home/hudson/hudson/plugins/cobertura" />
+<!--
+    <property name="cobertura.dir" value="/Applications/cobertura-1.9.3" />
+-->
+    <property name="cobertura.instr.dir" value="instr"/>
+    <property name="cobertura.coverage.dir" value="${build.dir}/coverage/cobertura" />
+    <path id="cobertura.classpath">
+        <fileset dir="${cobertura.dir}">
+            <include name="cobertura.jar" />
+            <include name="lib/**/*.jar" />
+        </fileset>
+    </path>
+    
+    <!-- Load cobertura custom ant tasks -->
+    <taskdef classpathref="cobertura.classpath" resource="tasks.properties" />
+    
+    <target name="cobertura-instrument" depends="clean,compile" description="instrument classes for Cobertura">
+        <delete dir="${cobertura.instr.dir}" />
+        <mkdir dir="${cobertura.instr.dir}" />
+        
+        <!-- Instrument the classes for cobertura -->
+        <cobertura-instrument todir="${cobertura.instr.dir}">
+            <fileset dir="${site.build.dir}">
+                <include name="**/*.class" />
+                <exclude name="**/*Test.class" />
+            </fileset>
+            <fileset dir="${lib.dir}/solrmarc/${solrmarc.core.build.dir}">
+                <include name="**/*.class" />
+                <exclude name="**/*Test.class" />
+            </fileset>
+        </cobertura-instrument>
+    </target>
+    
+    <target name="cobertura-test" depends="clean,testJar,cobertura-instrument" description="run tests with Coberature code coverage">
+        <path id="cobertura.test.classpath">
+            <pathelement location="${cobertura.instr.dir}" />
+            <fileset dir="${site.lib.dir}" includes="*.jar" />
+            <fileset dir="${lib.dir}" includes="*.jar" />
+            <fileset dir="${lib.dir}/solrmarc/${solrmarc.core.build.dir}" includes="*.jar" />
+            <fileset dir="${site.test.solr.dir}" includes="*.jar" />
+            <fileset file="${site.test.build.dir}/${site.test.jar}" />
+            <path refid="cobertura.classpath" />
+        </path>
+
+        <junit showoutput="yes" printsummary="yes" fork="yes">
+            <formatter type="xml" />
+
+            <classpath refid="cobertura.test.classpath" />
+            
+            <!-- name of the coverage data file to use.
+              The value specified below is the default.
+            -->
+            <sysproperty key="net.sourceforge.cobertura.datafile"
+                file="${site.build.dir}/cobertura.ser" />
+            
+            <sysproperty key="test.data.path" path="${test.data.dir}" />
+            <sysproperty key="test.data.file" value="${test.data.file}" />
+            <sysproperty key="solr.path" path="${site.test.solr.dir}" />
+            <sysproperty key="solr.data.dir" path="${site.test.solr.dir}/data" />
+            <sysproperty key="test.solr.verbose" value="${test.solr.verbose}" />
+            <test name="${test.class}" />
+        </junit>
+
+        <cobertura-report format="xml" destdir="${cobertura.coverage.dir}" srcdir="${site.src.dir}" />
+        <cobertura-report format="html" destdir="${cobertura.coverage.dir}" srcdir="${site.src.dir}" />
     </target>
     
 </project>
