--- a/build.xml
+++ b/build.xml
@@ -1233,7 +1233,7 @@
             <fileset dir="${site.lib.dir}" includes="*.jar" />
             <fileset dir="${lib.dir}" includes="*.jar" />
             <fileset dir="${lib.dir}/solrmarc/${solrmarc.core.build.dir}" includes="*.jar" />
-            <fileset dir="${site.test.solr.dir}" includes="*.jar" />
+            <fileset dir="${lib.dir}/solr_1.4" includes="*.jar" />
             <fileset file="${site.test.build.dir}/${site.test.jar}" />
             <path refid="cobertura.classpath" />
         </path>
