add preferred_barcode field for nearby-on-shelf
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3521 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -127,6 +127,7 @@ reverse_shelfkey = custom, getReverseShelfkeys
 
 # Item Info Fields (from 999 that aren't call number)
 barcode_search = 999i
+preferred_barcode = custom, getPreferredItemBarcode
 access_facet = custom, getAccessMethods
 building_facet = custom, getBuildings, library_map.properties
 item_display = customDeleteRecordIfFieldEmpty, getItemDisplay
