--- a/examples/stanfordBlacklight/solrConf/logging.properties
+++ b/examples/stanfordBlacklight/solrConf/logging.properties
@@ -23,5 +23,7 @@ java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
 # Where to write logs
 java.util.logging.FileHandler.pattern = ./logs/solr_log.%g.txt
 java.util.logging.FileHandler.append = true
+# how many files to cycle through
 java.util.logging.FileHandler.count = 5000
-java.util.logging.FileHandler.limit = 102400  # 100K
+# how many bytes to write  
+java.util.logging.FileHandler.limit = 102400  
