--- a/examples/stanfordBlacklight/solrConf/logging.properties
+++ b/examples/stanfordBlacklight/solrConf/logging.properties
@@ -25,5 +25,5 @@ java.util.logging.FileHandler.pattern = ./logs/solr_log.%g.txt
 java.util.logging.FileHandler.append = true
 # how many files to cycle through
 java.util.logging.FileHandler.count = 5000
-# how many bytes to write  
+# aprrox max bytes to write to a single file
 java.util.logging.FileHandler.limit = 102400  
