--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -20,8 +20,9 @@ vern_title_series_search = custom, getLinkedField(440anpv:490av:800fgklmnoprstv:
 # Title Display Fields
 title_245a_display = custom, removeTrailingPunct(245a, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
 vern_title_245a_display = custom, vernRemoveTrailingPunc(245a, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
-title_245c_display = 245c
-vern_title_245c_display = custom, getLinkedField(245c)
+# we don't currently use 245c display, and 1250 records are not indexed b/c they incorrectly have more than one 245c
+#title_245c_display = 245c
+#vern_title_245c_display = custom, getLinkedField(245c)
 # no sub c in title_display
 title_display = custom, removeTrailingPunct(245abdefghijklmnopqrstuvwxyz, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
 vern_title_display = custom, vernRemoveTrailingPunc(245abdefghijklmnopqrstuvwxyz, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
@@ -75,6 +76,14 @@ vern_subject_other_subvy_search = custom, getLinkedField(600vy:610vy:611vy:630vy
 topic_facet = custom, getTopicWithoutTrailingPunct(600abcdq:600t:610ab:610t:630a:630t:650a:655a, [\\\\,;:], ([A-Za-z0-9]{4}|\\)) )
 geographic_facet = custom, removeTrailingPunct(651a, [\\\\,;], ([A-Za-z0-9]{2}|\\)) )
 era_facet = custom, removeTrailingPunct(650y:651y, [\\\\,;], ([A-Za-z0-9]{2}) )
+
+# Series Search Fields
+series_title_search = 440anpv:830[a-x]
+series_person_search = 440anpv:800[a-x]
+series_org_search = 440anpv:810[a-x]
+series_proc_search = 440anpv:811[a-x]
+series_anything_search = 440anpv:800[a-x]:810[a-x]:811[a-x]:830[a-x]
+series_anything490_search = 440anpv:490a:800[a-x]:810[a-x]:811[a-x]:830[a-x]
 
 # Publication Fields
 pub_search = custom, getPublication 
